# DjChat

./: README.md  manage.py  pyproject.toml
DjChat/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: models.py
accounts/migrations/: 0001_initial.py
server/: admin.py  models.py  serializers.py  urls.py  views.py
server/migrations/: 0001_initial.py
